--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,6 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 # Bundle all files into a lib except for executable files.
-file(GLOB_RECURSE headers include/*.h)
 add_library(common_lib STATIC
         src/hashtable.c
         src/ringbuf.c
@@ -29,7 +28,7 @@ add_library(common_lib STATIC
         src/serialize.c
         src/heap.c
         src/kvstore.c
-        ${headers}
+        src/cqueue.c
 )
 target_include_directories(common_lib PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -75,3 +74,8 @@ add_test(NAME heap_test COMMAND heap_test)
 add_executable(kvstore_test tests/kvstore_test.cpp)
 target_link_libraries(kvstore_test PRIVATE common_lib gtest_main)
 add_test(NAME kvstore_test COMMAND kvstore_test)
+## cqueue_test
+add_executable(cqueue_test tests/cqueue_test.cpp)
+target_link_libraries(cqueue_test PRIVATE common_lib gtest_main pthread)
+add_test(NAME cqueue_test COMMAND cqueue_test)
+
